modification for background color theme. It is now black

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@
 }
 
 body {
-  background: var(--background);
+  @apply bg-black;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
